fix: change overflow-y to auto on dropdown (#81)

--- a/src/components/dropdown/custom-components/custom-menu-list/CustomMenuList.css
+++ b/src/components/dropdown/custom-components/custom-menu-list/CustomMenuList.css
@@ -2,6 +2,6 @@
 
 .menuList {
     max-height: 20rem;
-    overflow-y: scroll;
+    overflow-y: auto;
     background-color: var(--color-white);
 }
